Thu Jun  1 00:58:11 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (mcall): args == nil if no argument given.

Wed May 31 04:06:41 2000  Wakou Aoyama <wakou@fsinet.or.jp>

	* lib/cgi.rb: change: CGI#out()
	  if "HEAD" == REQUEST_METHOD then output only HTTP header.

Wed May 24 16:03:06 2000  Wakou Aoyama <wakou@fsinet.or.jp>

	* lib/cgi.rb: bug fix: CGI::escape(), CGI::Cookie::new()

	* lib/net/telnet.rb: improve: binmode(), telnetmode() interface

Tue May 23 08:36:24 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): forgot to restore old option
	  status by (?ix-ix).

Mon May 22 15:10:39 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (find_file): should check if the file really exists.

Sun May 21 20:58:08 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* pack.c: fix OFF16 and OFF32 definitions for Alpha and IRIX64.

Wed May 17 02:22:03 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (expr): avoid calling value_expr() twice.

Fri May 12 17:33:44 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (re_compile_pattern): charset_not should not exclude
	  newline from matching set.

Thu May 11 22:29:25 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* ext/md5/depend: add $(topdir)/config.h dependency to md5c.o.

	* ext/md5/extconf.rb: new file to add -DHAVE_CONFIG_H flag for Alpha.

Thu May 11 00:37:55 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (parse_regx): remove in_brack.

Wed May 10 12:51:18 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (proc_options): move adding RUBYLIB and "." to the load
	  path after #! line parsing.

	* parse.y (parse_regx): should parse backslash escape like `\c['
	  here to avoid causing `unterminated regexp' error.

Mon May  8 23:17:36 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* dln.c (dln_init): remove possible buffer overrun.  This is
	  suggested by Aleksi Niemela <aleksi.niemela@cinnober.com>

	* dln.c (init_funcname): ditto.
